--- a/refs.bib
+++ b/refs.bib
@@ -437,3 +437,14 @@
   year={2001},
   publisher={Springer}
 }
+
+@article{segal:2011,
+  title={Multivariate random forests},
+  author={Segal, Mark and Xiao, Yuanyuan},
+  journal={Wiley Interdisciplinary Reviews: Data Mining and Knowledge Discovery},
+  volume={1},
+  number={1},
+  pages={80--87},
+  year={2011},
+  publisher={Wiley Online Library}
+}
