--- a/refs.bib
+++ b/refs.bib
@@ -448,3 +448,14 @@
   year={2011},
   publisher={Wiley Online Library}
 }
+
+@article{death:2002,
+  title={Multivariate regression trees: a new technique for modeling species-environment relationships},
+  author={De'ath, Glenn},
+  journal={Ecology},
+  volume={83},
+  number={4},
+  pages={1105--1117},
+  year={2002},
+  publisher={Eco Soc America}
+}
