--- a/refs.bib
+++ b/refs.bib
@@ -459,3 +459,10 @@
   year={2002},
   publisher={Eco Soc America}
 }
+
+@book{james:2013,
+  title={An introduction to statistical learning},
+  author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+  year={2013},
+  publisher={Springer}
+}
