--- a/refs.bib
+++ b/refs.bib
@@ -466,3 +466,21 @@
   year={2013},
   publisher={Springer}
 }
+
+@article{zeger:1988,
+  title={Models for longitudinal data: a generalized estimating equation approach},
+  author={Zeger, Scott L and Liang, Kung-Yee and Albert, Paul S},
+  journal={Biometrics},
+  pages={1049--1060},
+  year={1988},
+  publisher={JSTOR}
+}
+
+@article{johnson:2004,
+  title={A Bayesian chi2 Test for Goodness-of-Fit},
+  author={Johnson, Valen E},
+  journal={Annals of Statistics},
+  pages={2361--2384},
+  year={2004},
+  publisher={JSTOR}
+}
