--- a/refs.bib
+++ b/refs.bib
@@ -484,3 +484,62 @@
   year={2004},
   publisher={JSTOR}
 }
+
+@article{breslow:1993,
+  title={Approximate inference in generalized linear mixed models},
+  author={Breslow, Norman E and Clayton, David G},
+  journal={Journal of the American Statistical Association},
+  volume={88},
+  number={421},
+  pages={9--25},
+  year={1993},
+  publisher={Taylor \& Francis Group}
+}
+
+@book{mccullagh:1989,
+  title={Generalized linear models},
+  author={McCullagh, Peter and Nelder, John A},
+  volume={2},
+  year={1989},
+  publisher={Chapman and Hall London}
+}
+
+@article{henderson:1959,
+  title={The estimation of environmental and genetic trends from records subject to culling},
+  author={Henderson, Charles R and Kempthorne, Oscar and Searle, Shayle R and Von Krosigk, CM},
+  journal={Biometrics},
+  volume={15},
+  number={2},
+  pages={192--218},
+  year={1959},
+  publisher={JSTOR}
+}
+
+@article{wedderburn:1974,
+  title={Quasi-likelihood functions, generalized linear models, and the Gauss—Newton method},
+  author={Wedderburn, Robert WM},
+  journal={Biometrika},
+  volume={61},
+  number={3},
+  pages={439--447},
+  year={1974},
+  publisher={Biometrika Trust}
+}
+
+@article{fong:2009,
+  title={Bayesian inference for generalized linear mixed models},
+  author={Fong, Youyi and Rue, H{\aa}vard and Wakefield, Jon},
+  journal={Biostatistics},
+  pages={kxp053},
+  year={2009},
+  publisher={Biometrika Trust}
+}
+
+@article{thall:1990,
+  title={Some covariance models for longitudinal count data with overdispersion},
+  author={Thall, Peter F and Vail, Stephen C},
+  journal={Biometrics},
+  pages={657--671},
+  year={1990},
+  publisher={JSTOR}
+}
