--- a/refs.bib
+++ b/refs.bib
@@ -416,6 +416,17 @@
   publisher={Taylor \& Francis}
 }
 
+@article{neal2000markov,
+  title={Markov chain sampling methods for Dirichlet process mixture models},
+  author={Neal, Radford M},
+  journal={Journal of computational and graphical statistics},
+  volume={9},
+  number={2},
+  pages={249--265},
+  year={2000},
+  publisher={Taylor \& Francis Group}
+}
+
 @article{neal:2001,
   title={Annealed importance sampling},
   author={Neal, Radford M},
