--- a/refs.bib
+++ b/refs.bib
@@ -554,3 +554,30 @@
   year={1990},
   publisher={JSTOR}
 }
+
+@article{green1995reversible,
+  title={Reversible jump Markov chain Monte Carlo computation and Bayesian model determination},
+  author={Green, Peter J},
+  journal={Biometrika},
+  volume={82},
+  number={4},
+  pages={711--732},
+  year={1995},
+  publisher={Biometrika Trust}
+}
+
+@article{richardson1997bayesian,
+  title={On Bayesian analysis of mixtures with an unknown number of components},
+  author={Richardson, Sylvia and Green, Peter J},
+  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  pages={731--792},
+  year={1997},
+  publisher={JSTOR}
+}
+
+@book{robert2013monte,
+  title={Monte Carlo statistical methods},
+  author={Robert, Christian and Casella, George},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
