--- a/refs.bib
+++ b/refs.bib
@@ -581,3 +581,21 @@
   year={2013},
   publisher={Springer Science \& Business Media}
 }
+
+@article{chen1996constitutive,
+  title={Constitutive behavior of tantalum and tantalum-tungsten alloys},
+  author={Chen, Shuh Rong and Gray, George T},
+  journal={Metallurgical and Materials Transactions A},
+  volume={27},
+  number={10},
+  pages={2994--3006},
+  year={1996},
+  publisher={Springer}
+}
+
+@article{fugate2005hierarchical,
+  title={Hierarchical Bayesian Analysis and the Preston-Tonks-Wallace Model},
+  author={Fugate, Michael and Williams, Brian and Higdon, David and Hanson, Kenneth M and Gattiker, James and Chen, Shuh-Rong and Unal, Cetin},
+  journal={Las Alamos National Lab},
+  year={2005}
+}
