--- a/refs.bib
+++ b/refs.bib
@@ -599,3 +599,14 @@
   journal={Las Alamos National Lab},
   year={2005}
 }
+
+@article{ferro2003inference,
+  title={Inference for clusters of extreme values},
+  author={Ferro, Christopher AT and Segers, Johan},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={65},
+  number={2},
+  pages={545--556},
+  year={2003},
+  publisher={Wiley Online Library}
+}
