--- a/refs.bib
+++ b/refs.bib
@@ -610,3 +610,13 @@
   year={2003},
   publisher={Wiley Online Library}
 }
+@article{suveges2007likelihood,
+  title={Likelihood estimation of the extremal index},
+  author={S{\"u}veges, M{\'a}ria},
+  journal={Extremes},
+  volume={10},
+  number={1},
+  pages={41--55},
+  year={2007},
+  publisher={Springer}
+}
