--- a/refs.bib
+++ b/refs.bib
@@ -620,3 +620,20 @@
   year={2007},
   publisher={Springer}
 }
+@article{suveges2010model,
+  title={Model misspecification in peaks over threshold analysis},
+  author={S{\"u}veges, M{\'a}ria and Davison, Anthony C},
+  journal={The Annals of Applied Statistics},
+  volume={4},
+  number={1},
+  pages={203--221},
+  year={2010},
+  publisher={Institute of Mathematical Statistics}
+}
+@book{coles2001introduction,
+  title={An introduction to statistical modeling of extreme values},
+  author={Coles, Stuart},
+  volume={208},
+  year={2001},
+  publisher={Springer}
+}
