--- a/refs.bib
+++ b/refs.bib
@@ -637,3 +637,12 @@
   year={2001},
   publisher={Springer}
 }
+@article{maurer2002long,
+  title={A long-term hydrologically based dataset of land surface fluxes and states for the conterminous United States},
+  author={Maurer, EP and Wood, AW and Adam, JC and Lettenmaier, DP and Nijssen, B},
+  journal={Journal of climate},
+  volume={15},
+  number={22},
+  pages={3237--3251},
+  year={2002}
+}
