--- a/refs.bib
+++ b/refs.bib
@@ -646,3 +646,15 @@
   pages={3237--3251},
   year={2002}
 }
+@book{prado2010time,
+  title={Time series: modeling, computation, and inference},
+  author={Prado, Raquel and West, Mike},
+  year={2010},
+  publisher={CRC Press}
+}
+@article{bhattacharyya1943measure,
+  title={On a measure of divergence between two statistical populations defined by their probability distribution},
+  author={Bhattacharyya, Anil},
+  journal={Bull. Calcutta Math. Soc},
+  year={1943}
+}
