--- a/refs.bib
+++ b/refs.bib
@@ -658,3 +658,40 @@
   journal={Bull. Calcutta Math. Soc},
   year={1943}
 }
+@article{merryfield2013canadian,
+  title={The Canadian seasonal to interannual prediction system. Part I: Models and initialization},
+  author={Merryfield, William J and Lee, Woo-Sung and Boer, George J and Kharin, Viatcheslav V and Scinocca, John F and Flato, Gregory M and Ajayamohan, RS and Fyfe, John C and Tang, Youmin and Polavarapu, Saroja},
+  journal={Monthly weather review},
+  volume={141},
+  number={8},
+  pages={2910--2945},
+  year={2013}
+}
+@article{mcfarlane2005cccma,
+  title={The CCCma third generation atmospheric general circulation model},
+  author={McFarlane, NA and Scinocca, JF and Lazare, M and Harvey, R and Verseghy, D and Li, J},
+  journal={CCCma internal rep},
+  volume={25},
+  pages={16},
+  year={2005}
+}
+@article{von2013canadian,
+  title={The Canadian fourth generation atmospheric global climate model (CanAM4). Part I: representation of physical processes},
+  author={von Salzen, Knut and Scinocca, John F and McFarlane, Norman A and Li, Jiangnan and Cole, Jason NS and Plummer, David and Verseghy, Diana and Reader, M Cathy and Ma, Xiaoyan and Lazare, Michael and others},
+  journal={Atmosphere-Ocean},
+  volume={51},
+  number={1},
+  pages={104--125},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+@article{leadbetter1983extremes,
+  title={Extremes and local dependence in stationary sequences},
+  author={Leadbetter, M Ross},
+  journal={Probability Theory and Related Fields},
+  volume={65},
+  number={2},
+  pages={291--306},
+  year={1983},
+  publisher={Springer}
+}
