--- a/refs.bib
+++ b/refs.bib
@@ -695,3 +695,13 @@
   year={1983},
   publisher={Springer}
 }
+@article{ferreira2014generalized,
+  title={The generalized Pareto process; with a view towards application and simulation},
+  author={Ferreira, Ana and de Haan, Laurens},
+  journal={Bernoulli},
+  volume={20},
+  number={4},
+  pages={1717--1737},
+  year={2014},
+  publisher={Bernoulli Society for Mathematical Statistics and Probability}
+}
