--- a/refs.bib
+++ b/refs.bib
@@ -705,3 +705,13 @@
   year={2014},
   publisher={Bernoulli Society for Mathematical Statistics and Probability}
 }
+@article{petrone1999bayesian,
+  title={Bayesian density estimation using Bernstein polynomials},
+  author={Petrone, Sonia},
+  journal={Canadian Journal of Statistics},
+  volume={27},
+  number={1},
+  pages={105--126},
+  year={1999},
+  publisher={Wiley Online Library}
+}
