--- a/refs.bib
+++ b/refs.bib
@@ -715,3 +715,10 @@
   year={1999},
   publisher={Wiley Online Library}
 }
+@article{qian2017big,
+  title={Big Data Bayesian Linear Regression and Variable Selection by Normal-Inverse-Gamma Summation},
+  author={Qian, Hang and others},
+  journal={Bayesian Analysis},
+  year={2017},
+  publisher={International Society for Bayesian Analysis}
+}
