--- a/refs.bib
+++ b/refs.bib
@@ -722,3 +722,22 @@
   year={2017},
   publisher={International Society for Bayesian Analysis}
 }
+@article{weller2012investigation,
+  title={An investigation of the pineapple express phenomenon via bivariate extreme value theory},
+  author={Weller, Grant B and Cooley, Daniel S and Sain, Stephan R},
+  journal={Environmetrics},
+  volume={23},
+  number={5},
+  pages={420--439},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+@article{weller2013two,
+  title={Two case studies on NARCCAP precipitation extremes},
+  author={Weller, Grant B and Cooley, Daniel and Sain, Stephan R and Bukovsky, Melissa S and Mearns, Linda O},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={118},
+  number={18},
+  year={2013},
+  publisher={Wiley Online Library}
+}
