--- a/refs.bib
+++ b/refs.bib
@@ -741,3 +741,45 @@
   year={2013},
   publisher={Wiley Online Library}
 }
+@article{goix2015sparsity,
+  title={Sparsity in Multivariate Extremes with Applications to Anomaly Detection},
+  author={Goix, Nicolas and Sabourin, Anne and Cl{\'e}men{\c{c}}on, St{\'e}phan},
+  journal={arXiv preprint arXiv:1507.05899},
+  year={2015}
+}
+@article{de1977limit,
+  title={Limit theory for multivariate sample extremes},
+  author={de Haan, Laurens and Resnick, Sidney I},
+  journal={Zeitschrift f{\"u}r Wahrscheinlichkeitstheorie und verwandte Gebiete},
+  volume={40},
+  number={4},
+  pages={317--337},
+  year={1977},
+  publisher={Springer}
+}
+@article{fix2016comparison,
+  title={A comparison of US precipitation extremes under RCP8. 5 and RCP4. 5 with an application of pattern scaling},
+  author={Fix, Miranda J and Cooley, Daniel and Sain, Stephan R and Tebaldi, Claudia},
+  journal={Climatic Change},
+  pages={1--13},
+  year={2016},
+  publisher={Springer}
+}
+@article{coles1999dependence,
+  title={Dependence measures for extreme value analyses},
+  author={Coles, Stuart and Heffernan, Janet and Tawn, Jonathan},
+  journal={Extremes},
+  volume={2},
+  number={4},
+  pages={339--365},
+  year={1999},
+  publisher={Springer}
+}
+@article{coles1991modelling,
+  title={Modelling extreme multivariate events},
+  author={Coles, Stuart G and Tawn, Jonathan A},
+  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  pages={377--392},
+  year={1991},
+  publisher={JSTOR}
+}
