--- a/refs.bib
+++ b/refs.bib
@@ -783,3 +783,51 @@
   year={1991},
   publisher={JSTOR}
 }
+@article{taylor2012overview,
+  title={An overview of CMIP5 and the experiment design},
+  author={Taylor, Karl E and Stouffer, Ronald J and Meehl, Gerald A},
+  journal={Bulletin of the American Meteorological Society},
+  volume={93},
+  number={4},
+  pages={485--498},
+  year={2012},
+  publisher={American Meteorological Society}
+}
+@article{hibbard2007strategy,
+  title={A strategy for climate change stabilization experiments},
+  author={Hibbard, Kathy A and Meehl, Gerald A and Cox, Peter M and Friedlingstein, Pierre},
+  journal={Eos, Transactions American Geophysical Union},
+  volume={88},
+  number={20},
+  pages={217--221},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+@article{meehl2009decadal,
+  title={Decadal prediction: can it be skillful?},
+  author={Meehl, Gerald A and Goddard, Lisa and Murphy, James and Stouffer, Ronald J and Boer, George and Danabasoglu, Gokhan and Dixon, Keith and Giorgetta, Marco A and Greene, Arthur M and Hawkins, ED and others},
+  journal={Bulletin of the American Meteorological Society},
+  volume={90},
+  number={10},
+  pages={1467--1485},
+  year={2009}
+}
+@article{easterling2000climate,
+  title={Climate extremes: observations, modeling, and impacts},
+  author={Easterling, David R and Meehl, Gerald A and Parmesan, Camille and Changnon, Stanley A and Karl, Thomas R and Mearns, Linda O},
+  journal={science},
+  volume={289},
+  number={5487},
+  pages={2068--2074},
+  year={2000},
+  publisher={American Association for the Advancement of Science}
+}
+@article{kim2012evaluation,
+  title={Evaluation of short-term climate change prediction in multi-model CMIP5 decadal hindcasts},
+  author={Kim, Hye-Mi and Webster, Peter J and Curry, Judith A},
+  journal={Geophysical Research Letters},
+  volume={39},
+  number={10},
+  year={2012},
+  publisher={Wiley Online Library}
+}
