--- a/refs.bib
+++ b/refs.bib
@@ -717,7 +717,7 @@
 }
 @article{qian2017big,
   title={Big Data Bayesian Linear Regression and Variable Selection by Normal-Inverse-Gamma Summation},
-  author={Qian, Hang and others},
+  author={Qian, Hang},
   journal={Bayesian Analysis},
   year={2017},
   publisher={International Society for Bayesian Analysis}
